# ChassisControl

./: .gitignore  CMakeLists.txt  README.md  chassis_control.h
cmake/: chassis_control-config.cmake.in
examples/: basic_control_example.cpp  simple_api_example.cpp
include/: chassis_control.h  global_variables.h
include/Vehicle_Control/: VehicleControl.h
include/Vehicle_Data_Input/: VehicleDataInput.h
include/Vehicle_Data_Output/: can_bus_interface.h
include/data_input/: sensor_input.h  state_estimator.h  vehicle_config.h
include/vehicle_control/: tire_model.h  torque_allocator.h  torque_smoother.h  vehicle_model.h
src/: chassis_control.cpp  global_variables.cpp
src/Vehicle_Control/: VehicleControl.cpp
src/Vehicle_Data_Input/: VehicleDataInput.cpp
src/Vehicle_Data_Output/: can_bus_interface.cpp
src/data_input/: sensor_input.cpp  state_estimator.cpp  vehicle_config.cpp
src/data_output/: can_bus_interface.cpp
src/vehicle_control/: tire_model.cpp  torque_allocator.cpp  torque_smoother.cpp  vehicle_model.cpp
